--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://ManavGori104.github.io/",
   "name": "resort",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ManavGori104.github.io/BeachResort",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,11 +18,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
